# golf-fiddling

./: .coverage  .gitignore  CLAUDE.md  README.md  analyze.py  dump.py  editor.py  hex-to-bin.py  pyproject.toml  requirements.txt  todo  visualize.py
courses/: meta.json
courses/japan/: course.json  hole_01.json  hole_02.json  hole_03.json  hole_04.json  hole_05.json  hole_06.json  hole_07.json  hole_08.json  hole_09.json  hole_10.json  hole_11.json  hole_12.json  hole_13.json  hole_14.json  hole_15.json  hole_16.json  hole_17.json  hole_18.json
courses/uk/: course.json  hole_01.json  hole_02.json  hole_03.json  hole_04.json  hole_05.json  hole_06.json  hole_07.json  hole_08.json  hole_09.json  hole_10.json  hole_11.json  hole_12.json  hole_13.json  hole_14.json  hole_15.json  hole_16.json  hole_17.json  hole_18.json
courses/us/: course.json  hole_01.json  hole_02.json  hole_03.json  hole_04.json  hole_05.json  hole_06.json  hole_07.json  hole_08.json  hole_09.json  hole_10.json  (+8 more)
data/: chr-ram.txt  green-ram.txt
docs/: forest_notes.md
editor/: NEIGHBOR_SUGGESTIONS_IDEAS.md  application.py  main.py
golf/: __init__.py
scratch/: hole_18.json
tests/: __init__.py  conftest.py  test_forest_fill_integration.py
tools/: __init__.py  analyze.py  analyze_greens_neighbors.py  analyze_neighbors.py  analyze_putting_surface.py  dump.py  expand_dict.py  extract_tables.py  find_neighbor.py  hex2bin.py  render_web.py  visualize.py
web/: README.md  ZOOM-FIX.md  app.js  index.html  measure.js  metadata.json  renderer.js  styles.css  test-zoom.html  test.html  ui.js
(+72 files in other folders)
